# pywrapper_for_bilateral_filter_with_cuda

./: .gitignore  CMakeLists.txt  filtering.ipynb  requirements.txt  setup.py
include/: bilateral_filter.cuh  ndarray_converter.h
src/: bilateral_filter.cu  bindings.cpp  ndarray_converter.cpp
